# Image-Layer

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/api/: main.py
apps/worker/: __init__.py  run_renderer.py
docs/architecture/: 2026-03-31-single-image-layer-extraction-architecture.md
docs/contracts/: api-and-integration-contract.md  data-contracts-and-manifest-schema.md  output-package-spec.md
docs/governance/: risk-register.md
docs/product/: personas-and-use-cases.md  prd.md  product-strategy.md  roadmap.md  success-metrics-and-slos.md
docs/quality/: evaluation-and-acceptance-criteria.md
docs/security/: incident-response-readiness.md  security-overview.md  trust-and-data-governance.md
docs/superpowers/plans/: 2026-03-31-phase-4a-fusion-quality-implementation-plan.md  2026-03-31-phase-5-renderer-handoff-implementation-plan.md
docs/superpowers/specs/: 2026-03-31-phase-4a-fusion-quality-design.md  2026-03-31-phase-5-renderer-handoff-design.md
tests/api/: test_health.py  test_jobs.py  test_renderers.py
tests/background/: test_cleanup.py
tests/contracts/: test_schemas.py
tests/fusion/: test_engine.py
tests/preview/: test_scoring.py
tests/quality/: test_evaluator.py
tests/renderers/: test_after_effects.py  test_registry.py
tests/text/: test_paddle.py
tests/visual/: test_heuristic.py
